PS specification implemented

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,4 +13,5 @@ target_sources(XLSteamTests
         catch_amalgamated.cpp
         TestXLSteamPT.cpp
         TestXLSteamPH.cpp
+        TestXLSteamPS.cpp
         )
